--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,6 +25,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Get Code
         uses: actions/checkout@v6
@@ -41,7 +42,14 @@ jobs:
       - name: Build project
         run: ./api/gradlew -p api clean build -x test
 
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v5
+        with:
+          name: dist-files
+          path: /api/build/libs
+
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Upload Code
