--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -43,10 +43,13 @@ jobs:
         run: ./api/gradlew -p api clean build -x test
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v6
         with:
           name: dist-files
-          path: /api/build/libs
+          path: |
+            api/build/libs
+            api/build/test-results
+            api/build/reports
 
   deploy:
     needs: build
