--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,6 +26,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: test
+    outputs:
+      jar-file: ${{ steps.publish.outputs.jar-file }}
     steps:
       - name: Get Code
         uses: actions/checkout@v6
@@ -41,6 +43,10 @@ jobs:
 
       - name: Build project
         run: ./api/gradlew -p api clean build -x test
+
+      - name: Publish JAR file
+        id: publish
+        run: find api/build/lisbs/*SNAPSHOT.jar -type f -execdir echo 'jar-file={}' >> $GITHUB_OUTPUT ';'
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v6
@@ -61,6 +67,9 @@ jobs:
 
       - name: Log Files Containing Checkup
         run: ls -R
+
+      - name: Output filename
+        run: echo "${{ needs.build.outputs.jar-file }}"
 
       - name: Mock Deploy Code
         run: |
